updateDropState